--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.18.0",
     "moment": "^2.29.1",
     "vue": "^2.0.8",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.0.1"
   }
 }
